Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48569

winrt: Resume from background makes application crash when using camera.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.0 RC
    • 5.5.1
    • Multimedia
    • Windows 8.1 x64
      MSVC 2013
      Lumia 620
      Lumia 630
      Lumia 1520
    • WinRT
    • f5235af0dc3aa433435dbd42b716776097af5acf

    Description

      Steps:
      1. Run attached QML on windows phone.
      2. Long press back button
      3. Tap application back to foreground
      Expected: App run normally
      Actual: App killed on resume.

      Debug this with lifecycle events in visual studio.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samuelnevala Samuel Nevala
            samuelnevala Samuel Nevala
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes